[package]
name = "greycat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
magick_rust = "0.19.0"
